--- a/TerminalBoard.App/Views/BoardView.xaml
+++ b/TerminalBoard.App/Views/BoardView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TerminalBoard.App.Views.MainView"
+﻿<Window x:Class="TerminalBoard.App.Views.BoardView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,9 +7,9 @@
         xmlns:cal="http://www.caliburnproject.org"
         xmlns:behaviors1="clr-namespace:TerminalBoard.App.UIComponents.Behaviors"
         xmlns:viewModels1="clr-namespace:TerminalBoard.App.ViewModels"
-        d:DataContext="{d:DesignInstance Type=viewModels1:MainViewModel}"
+        d:DataContext="{d:DesignInstance Type=viewModels1:BoardViewModel}"
         mc:Ignorable="d"
-        Title="MainView" Height="450" Width="800" TextOptions.TextRenderingMode="Aliased">
+        Title="BoardView" Height="450" Width="800" TextOptions.TextRenderingMode="Aliased">
     <b:Interaction.Triggers>
         <b:EventTrigger EventName="KeyDown">
             <cal:ActionMessage MethodName="RemoveItem">
@@ -65,12 +65,12 @@
         </Canvas>
 
         <Canvas x:Name="ControlCanvas">
-            <StackPanel>
+            <StackPanel Background="#2d2d2a">
                 <Button x:Name="Snap" Content="SNAP" Margin="5" />
                 <Button x:Name="AddTerminal" Content="ADD" Margin="5" />
-                <Button x:Name="Float" Content="Float" cal:Message.Attach="AddFloatTerminal()"/>
-                <Button x:Name="Multiply" Content="Multiplier" cal:Message.Attach="AddMultiplyTerminal()"/>
-                <Button x:Name="Output" Content="Output" cal:Message.Attach="AddOutputTerminal()"/>
+                <Button x:Name="Float" Content="FLOAT" cal:Message.Attach="AddFloatTerminal()" Margin="5"/>
+                <Button x:Name="Multiply" Content="MULTIPLY" cal:Message.Attach="AddMultiplyTerminal()" Margin="5"/>
+                <Button x:Name="Output" Content="OUTPUT" cal:Message.Attach="AddOutputTerminal()" Margin="5"/>
             </StackPanel>
         </Canvas>
     </Grid>
