--- a/TerminalBoard.App/Views/WireView.xaml
+++ b/TerminalBoard.App/Views/WireView.xaml
@@ -9,8 +9,6 @@
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" d:DataContext="{d:DesignInstance viewModels:WireViewModel}">
     <Canvas>
-        <Ellipse Height="6" Width="6" Fill="DarkSeaGreen" Canvas.Left="{Binding StartPoint.X}" Canvas.Top="{Binding StartPoint.Y}" Margin="-3,-3,0,0" />
-        <Ellipse Height="6" Width="6" Fill="DarkSeaGreen" Canvas.Left="{Binding EndPoint.X}" Canvas.Top="{Binding EndPoint.Y}" Margin="-3,-3,0,0" />
         <Path Stroke="DarkSeaGreen" StrokeThickness="3" x:Name="WireGeometry">
             <Path.Triggers>
                 <EventTrigger RoutedEvent="MouseEnter">
@@ -38,8 +36,15 @@
                                 <PathFigure.Segments>
                                     <PathSegmentCollection>
                                         <LineSegment Point="{Binding StartExtensionPoint}" />
+                                        <QuadraticBezierSegment Point1="{Binding LowerControlPoint}" Point2="{Binding MidControlPoint}"/>
+                                </PathSegmentCollection>
+                                </PathFigure.Segments>
+                            </PathFigure>
+                            <PathFigure StartPoint="{Binding EndPoint}">
+                                <PathFigure.Segments>
+                                    <PathSegmentCollection>
                                         <LineSegment Point="{Binding EndExtensionPoint}" />
-                                        <LineSegment Point="{Binding EndPoint}" />
+                                        <QuadraticBezierSegment Point1="{Binding UpperControlPoint}" Point2="{Binding MidControlPoint}"/>
                                     </PathSegmentCollection>
                                 </PathFigure.Segments>
                             </PathFigure>
