--- a/TerminalBoard.App/Views/BoardView.xaml
+++ b/TerminalBoard.App/Views/BoardView.xaml
@@ -38,7 +38,7 @@
             </Canvas.ContextMenu>
             <b:Interaction.Behaviors>
                 <behaviorsA:CanvasPanZoomBehavior />
-                <behaviorsA:CanvasSelectionBehavior />
+                <behaviorsA:CanvasSelectionBoxBehavior />
             </b:Interaction.Behaviors>
 
             <ItemsControl ItemsSource="{Binding WireViewModels}" x:Name="Wires">
