--- a/TerminalBoard.App/Views/BoardView.xaml
+++ b/TerminalBoard.App/Views/BoardView.xaml
@@ -18,23 +18,24 @@
             </cal:ActionMessage>
         </b:EventTrigger>
     </b:Interaction.Triggers>
-    <Grid>
-        <Custom:GridCanvas x:Name="BackgroundCanvas" Background="#FF3A3A3A" GridSpacing="{Binding GridSpacing }" ShowGrid="{Binding Grid}" GridColor="Black"/>
-        <Canvas x:Name="MainCanvas" Background="Transparent" MouseRightButtonUp="MainCanvas_OnMouseRightButtonUp" Focusable="True">
-            <Canvas.ContextMenu>
-                <ContextMenu>
+    <Grid Name="MainGrid" >
+        <Custom:GridCanvas x:Name="BackgroundCanvas" Background="#FF3A3A3A" GridSpacing="{Binding GridSpacing }"
+                           ShowGrid="{Binding Grid}" GridColor="#303030" />
+        <Canvas x:Name="MainCanvas" Background="Transparent" MouseRightButtonUp="MainCanvas_OnMouseRightButtonUp"
+                Focusable="True" Tag="{Binding ElementName=MainGrid, Path=DataContext}">
+            <Canvas.ContextMenu >
+                <ContextMenu Name="ContextMenu">
                     <MenuItem Header="Math" IsCheckable="False">
-                        <MenuItem Header="Operators" IsCheckable ="False">
-                            <MenuItem Header="Multiplication" IsCheckable="False"/>
-                            <MenuItem Header="Division" cal:Message.Attach="[Event Click] = [Action CreateTerminal('Division')]"/>
-                            <MenuItem Header="Addition"/>
-                            <MenuItem Header="Subtraction"/>
+                        <MenuItem Header="Operators" IsCheckable="False">
+                            <MenuItem Header="Multiplication" cal:Message.Attach="CreateTerminal('Multiplication')" IsCheckable="False" />
+                            <MenuItem Header="Division" cal:Message.Attach="CreateTerminal('Division')" />
+                            <MenuItem Header="Addition" cal:Message.Attach="CreateTerminal('Addition')"/>
+                            <MenuItem Header="Subtraction" cal:Message.Attach="CreateTerminal('Subtraction')"/>
                         </MenuItem>
                         <MenuItem Header="Values">
-                            <MenuItem Header="Float"/>
-                            <MenuItem Header="Integer"/>
+                            <MenuItem Header="Float" cal:Message.Attach="CreateTerminal('FloatValue')"/>
+                            <MenuItem Header="Integer" cal:Message.Attach="CreateTerminal('IntegerValue')"/>
                         </MenuItem>
-
                     </MenuItem>
                 </ContextMenu>
             </Canvas.ContextMenu>
@@ -83,17 +84,17 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
 
-            <Rectangle x:Name="SelectionRectangle" Fill="DarkGray" Opacity="0.25" Stroke="DarkOrange" StrokeThickness="1"/>
+            <Rectangle x:Name="SelectionRectangle" Fill="DarkGray" Opacity="0.25" Stroke="DarkOrange"
+                       StrokeThickness="1" />
         </Canvas>
         <Canvas x:Name="ControlCanvas">
             <StackPanel Background="#2d2d2a">
                 <Button x:Name="Snap" Content="SNAP" Margin="5" />
                 <Button x:Name="AddTerminal" Content="ADD" Margin="5" />
-                <Button x:Name="Float" Content="FLOAT" cal:Message.Attach="AddFloatTerminal()" Margin="5"/>
-                <Button x:Name="Multiply" Content="MULTIPLY" cal:Message.Attach="AddMultiplyTerminal()" Margin="5"/>
-                <Button x:Name="Output" Content="OUTPUT" cal:Message.Attach="AddOutputTerminal()" Margin="5"/>
+                <Button x:Name="Float" Content="FLOAT" cal:Message.Attach="AddFloatTerminal()" Margin="5" />
+                <Button x:Name="Multiply" Content="MULTIPLY" cal:Message.Attach="AddMultiplyTerminal()" Margin="5" />
+                <Button x:Name="Output" Content="OUTPUT" cal:Message.Attach="AddOutputTerminal()" Margin="5" />
             </StackPanel>
         </Canvas>
-        
     </Grid>
 </Window>
